--- a/Styles/hangman.css
+++ b/Styles/hangman.css
@@ -35,7 +35,7 @@ h3{
     height: 100%;
     text-align: center;
     background: lightyellow;
-    background-image: url("https://cdn.pixabay.com/photo/2017/01/31/00/37/cartoon-2022644_960_720.png");
+    background-image: url("../Images/MoonLandscape.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
